# ChangeLog for app-admin/syslog-ng
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/syslog-ng/ChangeLog,v 1.421 2015/03/29 07:27:06 mr_bones_ Exp $

  29 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> files/3.6/syslog-ng.rc6:
  fix checkpath typo (bug #544748)

  28 Mar 2015; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for ppc, wrt bug #543234

  25 Mar 2015; Agostino Sarubbo <ago@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for x86, wrt bug #543234

  23 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.6.2.ebuild:
  add epatch_user for additional user control

  23 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org> syslog-ng-3.6.2.ebuild:
  use embedded crypto to avoid build issues (bug #543522)

  19 Mar 2015; Jeroen Roovers <jer@gentoo.org> syslog-ng-3.6.2.ebuild:
  Stable for HPPA (bug #543234).

  14 Mar 2015; Mikle Kolyada <zlogene@gentoo.org> syslog-ng-3.6.2.ebuild:
  amd64 stable wrt bug #543234

  14 Mar 2015; Michael Sterrett <mr_bones_@gentoo.org>
  -files/3.4/syslog-ng-3.4.2-autotools.patch,
  -files/3.4/syslog-ng-3.4.2-compile.patch, -syslog-ng-3.4.7.ebuild:
  old

  19 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  +files/3.6/syslog-ng-3.6.2-redis.patch, -files/3.5/syslog-ng.conf.gentoo,
  -files/3.5/syslog-ng.conf.gentoo.fbsd,
  -files/3.5/syslog-ng.conf.gentoo.hardened, -files/3.5/syslog-ng.confd,
  -files/3.5/syslog-ng.rc6, syslog-ng-3.6.2.ebuild:
  Add upstream patch to avoid memory leak with USE=redis

  18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -files/3.6/syslog-ng-3.6.1-link-smtp.patch,
  -files/3.6/syslog-ng-3.6.1-warnings.patch, -syslog-ng-3.6.1.ebuild:
  old

  18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org>
  files/3.6/syslog-ng.confd, files/3.6/syslog-ng.rc6:
  update to /run from /var/run (bug #531840)

*syslog-ng-3.6.2 (18 Dec 2014)

  18 Dec 2014; Michael Sterrett <mr_bones_@gentoo.org> +syslog-ng-3.6.2.ebuild: