@@ -17,6 +17,6 @@ AUX syslog-ng.logrotate.in 345 SHA256 7e854cbac5b376b3d1d6906fed4cff794e17998c04
 DIST syslog-ng_3.4.8.tar.gz 3169372 SHA256 96c2f970fbba4fdd7659b1fee5e476d2858c911d4304d42099f495493762ff49 SHA512 23ba9908664e594c186cbe4bd5dcfb5d2ed3faf02ec45b931bb91b078660547989c2340a08b478a33adb530d39a6d6f39a2e7519107a3f6b923ac9f39529620e WHIRLPOOL 1085fa2c90e0c85421c64ed50e8a357f29006afea2f3e329e42d1e27f4210a10fe0f05d4af95a11c245d68b43644a4a829a50c05b7d541f59a6f580b3643b434
 DIST syslog-ng_3.6.2.tar.gz 3207456 SHA256 ef47fada52981e09af570457a5af30f815f5d5b6c2e33754cedd4ca9780d8261 SHA512 15603b4df2001e1ce7e0019d0dd9a0f4295445e3fd19a527ebf3d49486da7da27fac6c465727ec0354f8f70ca0f671a285ec132f9aa0de62b40f18b44af2a226 WHIRLPOOL 7135db242374d6e5789c0820a06187b7e325054fd214e3aee75aac5b8dde56786b432cc4519c07ce0cd413c3a560e8e74ee6eca319c21eaa750ca8140ef1b63f
 EBUILD syslog-ng-3.4.8.ebuild 3588 SHA256 2bf7cb39b5486e7a6b95834ad87ec19a0d00e93126fc57dd826b6bebc3e9e844 SHA512 32eadb10f65970756a30d852dcb14bf0296425e5c256182956d3cc42b8571c46df3a293da40a9ff730046252a3e078413e11543176c39586d5dbcea970e41939 WHIRLPOOL ebbb2b786c6061017d0a69878fb6811d7b97495f948e5c46d8dff695281b864e6f8a8d177f71c7a75652905f4f511c479e26868ccebb7838c211a8dda8ecfc9d
-EBUILD syslog-ng-3.6.2.ebuild 3788 SHA256 6278a927f1ab64e489242468c0640c932c80a94c374cf77514f908abd7975bcc SHA512 e7720ae7ab6c9ccb87942812b0dccff2fc0289597dab94fe39008c77712fd70ebae7f715afbfe4377480e56a4165d7d3e6dbc209d2e0de704754215ceed2454d WHIRLPOOL 3f432135a6eddffb3c17251b59257499d2a6cfaf1d0e2662631c9a7e21b1018bb858289a7506cfe03dfa7341bba15ae25682e5c241d4b35c07c800bac16ab013
-MISC ChangeLog 59215 SHA256 60d85c6f8934af657b4002a2934096891c1ef61b849916df6260df26bb93c047 SHA512 2ab55b7d5e15455f8c1734cdc03b08dd3eb83befd012e5f93957201e1481ebbb839b87b14287d0c3afea74bf5f26c01f33f2a44b3354fbba729463c158744b44 WHIRLPOOL 21c23ec2f9d76b1ad4686f013e27926282a507af355785d95861769f1ef677021314cea0cce8e42dc1e9e9598c7c32ab1f20ba6ad08549b84769f52c753c55a7
+EBUILD syslog-ng-3.6.2.ebuild 3789 SHA256 0ce488b3ff4b93bcada54e63a911dcf163552fe825687ed4993f84d597708f01 SHA512 1762af6f387b2bfdba4edc3ac24c83be5c9bf779ecd4791ebe2cb49ce21bce813e5375ed68415f320b93a35f715cd7bae30b5f2d5c91164f5781ba3e2776ac2d WHIRLPOOL 99d6a5fed24b16ec24d88bbc02e30467ae23061e2ee012e80248c91c855402b009282914ec8d45632f1ae4860e04b7da51be53d3e23050104d46d145e4de008a
+MISC ChangeLog 59289 SHA256 29eb1528948a3f9fa703c3e6a70f76308d039cee300df0409ac16849152d52c9 SHA512 ca3866640f166a67b7071b4452353f2e557cbf91e7cb2af72481bd275f839d7bd7c6c0426ab4333cf0cf2ef27380e088febf2883e66d919be7d3dfa541227460 WHIRLPOOL 3620c2575e126fb133e31f089e9f2a5f4c8243a5eb4f3b3a307d055179c99ea282723af91544fa364fc3e9049676227a2e0d2b03249055727d78e7b39f8366d8
 MISC metadata.xml 792 SHA256 9116bcafb5bc0f8cb3e27e43b474bb387de0467f47fe81f2a2da462cd1438834 SHA512 d81f3f86da8fa594eca1b2224ffe4e07c467f63aee77273b91df7b91256d54653c70b1a3c6543f1a6ce51594f75fdb4245d4ad6766d687275efe7b1811b317a4 WHIRLPOOL efc50cd99fe30a65e83b180794e3d9f58e09f6680c14ea038e09746f414b83c5ba3380d0c6796cca254a4ab81ce676f9dbdefb577abc5a39a26281a8ef9010d2
