@@ -5,14 +5,25 @@ AUX subtitleeditor-0.41.0-keyframe-generation.patch 1288 SHA256 3461ea5819a795dd
 AUX subtitleeditor-0.41.0-subtitle-edition.patch 790 SHA256 7d14d41fc999747bcdfbcfa4ddcc2d03c821a5f97779418a9d13e2da436a2570 SHA512 7b1c92bc59be16321088575fb7bd02b981458f71faf7564716503d939462f8d9779c51d75b25fee871c0cb67c67585da50f5791aeca120dd708e437b72bb0627 WHIRLPOOL 3ac7e37067e1e7b33688464d99d3d7f72979467e1fdca3163979b6a53efc14e995077dc691d0877886316a8b36de6d21a60a8fd938cb7a76a50e409abd3c20bd
 AUX subtitleeditor-0.41.0-textoverlay.patch 591 SHA256 46153824964ec754bde35a43158195662af1bfee8299b206e81082325fdfac7e SHA512 f63d84d39ff544fcb2429bb6ea5ef5777ec36e589e470f20b670dbe69b4648b2dc2d71d0cc997272e2322f3835b2774f1afca33909337fc361e955a95d784d77 WHIRLPOOL 866b122164c624d8726dabc1a13297255628833a90a366d9cb46289dcd91586c20f37fece89f69c72508250d00bd3f4478688e8a6bcdf19a44fe6d4b0e395f60
 DIST subtitleeditor-0.41.1.tar.gz 1637940 SHA256 3183f2f9831359f2200194fcc2d360198094c494892ccacd08a28717bffac0d0 SHA512 6e87df6bf1b97fc085387f331fa415be48086b9dabf445e6050ff3ab3c812c8fff72e613959308f07c2e849bf95064c5d288f44dbc266997e7143bbb46615c9d WHIRLPOOL 111163dde1cf17df34e0dfb0aeeb874a98095d6d338ca22138ff13747697d78a2d1be127f344c36286b79f828918ab1c615bccc7e04cc8586b12efe407c76f52
-EBUILD subtitleeditor-0.41.1-r1.ebuild 1768 SHA256 b2c0aa70904d712e13a8ccb5b8b258be5711c2237cf82cd77b4cf3649c7af0b3 SHA512 5ce8be6a79b64dfe2a4c85334e37d5b99c169a2dbf8452e1e8fcbc9123eaed8b62960836c7ebc445a50f20be3c465b919e92f743ffaed1de7edade8f0b8ddd10 WHIRLPOOL 208f2104b8909053fdc0a8cfc3609d56083f80fb343a55c6513a80dc975aa1cdfb1a382d5d1f8fa94fe37ff9f95326fc2f08e69415e6fbeecca076c750494d72
-EBUILD subtitleeditor-0.41.1.ebuild 1660 SHA256 e2d36fd874db823d5c335ff4fb8fd4d3c90d1857ecb413b0c10b40116bdd71aa SHA512 c8a627f1b8f11e3c038ab17b7327267f53d8394b4b598c7cf9d90421113615ea3cab5dff0d0ea791426b688d1d6c2274da00b7b1ac3ba43f8784dfe945be9bd9 WHIRLPOOL d44f5d5a1fd1b571eda32e6aac533c95aa8e013a483517338f7033d00960c209cfaadcc895f741ff7709d039854c5d0639758d8e1952071a933d933f4977890e
-MISC ChangeLog 6021 SHA256 3be9bb7a621b9f63a9bcb818a44efdf2c2d6bd37bb846845a7b6ba60bef84786 SHA512 f268284a753846d6e613c37aea158adcef3207db30e8fa03a12d39c5ecbf0bd2a9eac730c396042c07e42e2328a3b2f777e055255368357ee4f5f299991e4ddf WHIRLPOOL e1e98b234b72f3977fbd673cbdc63f52fdb50058aba3b4349e2b003bb6988f97cd0719e5ed91dd97d7c22734dd2024ea011861df64ed558b7ec78b91dd516af2
+EBUILD subtitleeditor-0.41.1-r1.ebuild 1947 SHA256 afa576c9e175d32def7c8294c520c67a2984aa118c7065a7e80ba755a039dcc3 SHA512 60a032c8e6cfb5595c0faf54bb297072a4ac0c0794aa6e090815a536aee0cc733ba0374b7061cb63c2b4ec45558602c6f2eddf3d3428cc474c92d017dcee9a81 WHIRLPOOL db8e7732e22ae224272664f797a8950d5fb12293458fa228d45856cb6f6f4ecff79df2b4fb17cf3874ce1dda5e876d7bc2ef59d6cf03172009aa6bbe425813ad
+MISC ChangeLog 6226 SHA256 d946945af3541ab856d3f0ce7d61ef979358c855600ff29cf12f96e7cfcbac4f SHA512 0a7c4bc6a440d083bdc2c4320e1dda79ca1775ab6c81a1d143180c20fe1fcf8c03356f208dd6e22d1388896953ee62fb0f75c0118f01489f9ac2195a8c8ebffe WHIRLPOOL 6b9b73f49dafa1f57cfbd4e6f9e9df1ece2433ed7765394b5213c0ac552e2a5cf7bcb6120982fee213e9c69a4ad019b4a7056427fffc02b9bfc37f12d7647ad3
 MISC metadata.xml 569 SHA256 01b59f2475b528613f323b616eb4fd83c585dea04782eed9fa73f6228a39d323 SHA512 f2bece30fd1eb914b5727d7f81b9b54b3c66efa629721fcace6efa5a5d6dab9dba7f34ee68fb07b3b576fbc3f4b9f4c7cdbbc5ce3423094204d6dec23fde7e48 WHIRLPOOL 7817122e4dc041edbf1192bd6a2209fac5cfbd27f535268d3ed81c12cb0af9e104cf981a6329c18b8f325a1724ef3d0b66866773cee72f92d3bd01df0c2da08e
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iEYEAREIAAYFAlUFiTUACgkQCaWpQKGI+9RLLQCfTWKvsaWxU3jkgUR4Ip8USp3v
-Lb4Anirx5X3fuOx6qUd2WDAwhkVxRlEx
-=mkj8
+iQJ8BAEBCABmBQJVGLVFXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ1RTNCRkUzRDRBNkI2MEEwQkYwQzMyOEEx
+OEU1QjZGMkQ4RDVFQzhEAAoJEBjltvLY1eyN4iMP/2VPmFMEapoV5dvGGp6tUjLz
+VIAMQ+7iTGXCo+yBmYEeNKHPwXNgMb7EU4bhk53t9/3B5WWmF+SjZYPzgWOb6W0O
+A8IRyfyoCppC/y6IYRIZv1FdsdCzrWUnp/by8gVsp9hWGMIYLuRwRrJgDPfgsAk8
+xWqRpI0CwO9EM3yRhrPzZj6wQjDdzRle4y0yBSZyoRCSlzHuxU/+p1qsWXuvvRSr
+asZsOHpEQkcfTM/7BLzvyX6O2l/friygVSjaapHckx+icvEs/0Lr9NhyBaq1675F
+7DvwfkC13DWtayOSwd9YZFSlzclXUXzsZpeS2g0Ov9pXIYBGhbKJAlgvuPR3K2yp
+YV4qgSbo5Vrgd1vxJA0wilG5P6R9HCrxxlEHxW+lAIbiWP3RZDz+Rfj16IMX83Ob
+3d3z0gqRQYuuwzWRqBPYlvXCrkR3FR0Gp7lY5Ru3GQhP/ohVXAddACiEHAaaCS5S
+BtFlQaiA+8KAEzjlnqehwWmkF866WTyRzWdYD7/xd78BUg193A5Vrw9OLDKBnjcN
+MacIZP21f9IfR2vd7BrCG0BgH922+QLHSqdP2YqxvR6dFNnTKk+/8Y5DZWAiXDDD
++T9cTWIUbv9aZ4wE2HMQML3snlbPNAsBIIWkA6Rc+U8rSWvKauKq6w2pSsJsRJvS
+cHCx1D4w7NaXBaSOw5va
+=2u+U
 -----END PGP SIGNATURE-----
