@@ -4,11 +4,11 @@ DESCRIPTION=syslog replacement with advanced filtering features
 EAPI=5
 HOMEPAGE=http://www.balabit.com/network-security/syslog-ng
 IUSE=amqp caps dbi geoip ipv6 json mongodb pacct redis smtp spoof-source ssl systemd tcpd
-KEYWORDS=~alpha amd64 ~arm ~arm64 hppa ~ia64 ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd
+KEYWORDS=~alpha amd64 ~arm arm64 hppa ~ia64 ~mips ppc ~ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd
 LICENSE=GPL-2+ LGPL-2.1+
 RDEPEND=caps? ( sys-libs/libcap ) dbi? ( >=dev-db/libdbi-0.8.3 ) geoip? ( >=dev-libs/geoip-1.5.0 ) json? ( >=dev-libs/json-c-0.9 ) redis? ( dev-libs/hiredis ) smtp? ( net-libs/libesmtp ) spoof-source? ( net-libs/libnet:1.1 ) ssl? ( dev-libs/openssl:= ) systemd? ( sys-apps/systemd ) tcpd? ( >=sys-apps/tcp-wrappers-7.6 ) dev-libs/libpcre >=dev-libs/eventlog-0.2.12 >=dev-libs/glib-2.10.1:2
 RESTRICT=test
 SLOT=0
 SRC_URI=http://www.balabit.com/downloads/files/syslog-ng/sources/3.6.2/source/syslog-ng_3.6.2.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=e25c3c6a4d34d989d3bf2ffc5657eda0
+_md5_=19971e3c769b20b088c032eab3e122ed
