@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst postrm preinst prepare unpack
-DEPEND=app-text/iso-codes >=dev-cpp/gtkmm-2.14:2.4 >=dev-cpp/glibmm-2.16.3:2 >=dev-cpp/libxmlpp-2.20:2.6 >=app-text/enchant-1.4 >=dev-cpp/gstreamermm-0.10.6:0.10 >=media-libs/gst-plugins-good-0.10:0.10 >=media-plugins/gst-plugins-meta-0.10-r2:0.10 >=media-plugins/gst-plugins-pango-0.10:0.10 >=media-plugins/gst-plugins-xvideo-0.10:0.10 opengl? ( >=dev-cpp/gtkglextmm-1.2 ) >=dev-util/intltool-0.40 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
+DEPEND=app-text/iso-codes dev-cpp/cairomm >=dev-cpp/gtkmm-2.14:2.4 >=dev-cpp/glibmm-2.16.3:2 dev-libs/glib:2 dev-libs/libsigc++:2 >=dev-cpp/libxmlpp-2.20:2.6 >=app-text/enchant-1.4 >=dev-cpp/gstreamermm-0.10.6:0.10 media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 >=media-libs/gst-plugins-good-0.10:0.10 >=media-plugins/gst-plugins-meta-0.10-r2:0.10 >=media-plugins/gst-plugins-pango-0.10:0.10 >=media-plugins/gst-plugins-xvideo-0.10:0.10 x11-libs/gtk+:2 virtual/libintl opengl? ( >=dev-cpp/gtkglextmm-1.2:1.0 virtual/opengl ) >=dev-util/intltool-0.40 virtual/pkgconfig app-arch/xz-utils >=sys-apps/sed-4
 DESCRIPTION=GTK+2 subtitle editing tool
 EAPI=5
 HOMEPAGE=http://home.gna.org/subtitleeditor/
 IUSE=debug nls opengl
 KEYWORDS=amd64 x86
-LICENSE=GPL-2
-RDEPEND=app-text/iso-codes >=dev-cpp/gtkmm-2.14:2.4 >=dev-cpp/glibmm-2.16.3:2 >=dev-cpp/libxmlpp-2.20:2.6 >=app-text/enchant-1.4 >=dev-cpp/gstreamermm-0.10.6:0.10 >=media-libs/gst-plugins-good-0.10:0.10 >=media-plugins/gst-plugins-meta-0.10-r2:0.10 >=media-plugins/gst-plugins-pango-0.10:0.10 >=media-plugins/gst-plugins-xvideo-0.10:0.10 opengl? ( >=dev-cpp/gtkglextmm-1.2 )
+LICENSE=GPL-3+
+RDEPEND=app-text/iso-codes dev-cpp/cairomm >=dev-cpp/gtkmm-2.14:2.4 >=dev-cpp/glibmm-2.16.3:2 dev-libs/glib:2 dev-libs/libsigc++:2 >=dev-cpp/libxmlpp-2.20:2.6 >=app-text/enchant-1.4 >=dev-cpp/gstreamermm-0.10.6:0.10 media-libs/gstreamer:0.10 media-libs/gst-plugins-base:0.10 >=media-libs/gst-plugins-good-0.10:0.10 >=media-plugins/gst-plugins-meta-0.10-r2:0.10 >=media-plugins/gst-plugins-pango-0.10:0.10 >=media-plugins/gst-plugins-xvideo-0.10:0.10 x11-libs/gtk+:2 virtual/libintl opengl? ( >=dev-cpp/gtkglextmm-1.2:1.0 virtual/opengl )
 SLOT=0
 SRC_URI=http://download.gna.org/subtitleeditor/0.41/subtitleeditor-0.41.1.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	c263990f1b677b0f0be0a3299f179762	gnome.org	8fef8f967214f56e08fa92d61163d891	gnome2	c77a2c791ae15742c3c796344e279142	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=0fe1f4996c546d247a3b1b1f869acd30
+_md5_=18d52f694e31a89d155702eafaf08e80
