@@ -1,6 +1,10 @@
 # ChangeLog for media-video/subtitleeditor
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/subtitleeditor/ChangeLog,v 1.34 2015/03/15 13:29:39 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/subtitleeditor/ChangeLog,v 1.35 2015/03/30 02:30:31 tetromino Exp $
+
+  29 Mar 2015; Alexandre Rostovtsev <tetromino@gentoo.org>
+  -subtitleeditor-0.41.1.ebuild, subtitleeditor-0.41.1-r1.ebuild:
+  Add missing deps (bug #543346, thanks to Nikoli). Fix license. Drop old.
 
   15 Mar 2015; Pacho Ramos <pacho@gentoo.org> subtitleeditor-0.41.1-r1.ebuild:
   x86 stable, bug 534012
